actions script fixes

--- a/lang/en.json
+++ b/lang/en.json
@@ -23,11 +23,13 @@
 	"PF2E.Actions.Warning.FreeHands": "You have no free hands nor appropriate tools to bypass.",
 	"PF2E.Actions.Warning.Size": "Your target is too big!",
 	"PF2E.Actions.Warning.Reach": "Your target is out of your reach!",
+	"PF2E.Actions.Warning.Immune": "Your target is immune to this action.",
 	
 	"PF2E.Actions.ConcealAnObject.Title": "Conceal An Object",
 	"PF2E.Actions.CreateADiversion.Title": "Create a Diversion",
 	"PF2E.Actions.CreateADiversion.TrickGesture": "Trick/Gesture",
 	"PF2E.Actions.CreateADiversion.DistractingWords": "Distracting Words",
+	"PF2E.Actions.CreateADiversion.Warning.NotNeeded": "Target '{target}' is currently not observing you.",
 	"PF2E.Actions.Escape.Title": "Escape",
 	"PF2E.Actions.Aid.Title": "Aid",
 	"PF2E.Actions.AdministerFirstAid.Title": "First Aid",
@@ -36,6 +38,7 @@
 	"PF2E.Actions.AdministerFirstAid.Dying": "Dying",
 	"PF2E.Actions.AdministerFirstAid.BleedingFlatCheck": "Bleeding Flat Check : {roll}",
 	"PF2E.Actions.AdministerFirstAid.PoisoningFlatCheck": "Posioning Flat Check : {roll}",
+	"PF2E.Actions.AdministerFirstAid.Warning.NoAffliction": "No affliction to cure.",
 	"PF2E.Actions.TakeCover.Title": "Take Cover",
 	"PF2E.Actions.ReceiveAid.Title": "Receive Aid",
 	"PF2E.Actions.RaiseAShield.Title": "Raise a Shield",
@@ -61,6 +64,7 @@
 	"PF2E.Actions.Mount.Title": "Mount",
 	"PF2E.Actions.Mount.MountMessage": "I mount {mount}",
 	"PF2E.Actions.Mount.DismountMessage": "I dismount {mount}",
+	"PF2E.Actions.Mount.Warning.NoAvail": "No available mount!",
 	"PF2E.Actions.Ready.Title": "Ready",
 	
 	"PF2E.Actions.AvoidNotice.Title": "Avoid Notice",
@@ -160,8 +164,11 @@
 	"PF2E.MKS.Warning.Target.NoneMustBeSelected": "You must target no tokens!",
 	"PF2E.MKS.Warning.Target.MustBeAlly": "You must target an ally token.",
 	"PF2E.MKS.Warning.Target.MustBeEnemy": "You must target an enemy token.",
+	"PF2E.MKS.Warning.Target.WrongType": "You must target a token of a specific type.",
 	"PF2E.MKS.Warning.Encounter.NoneExists": "No encounter found.",
 	"PF2E.MKS.Warning.Action.MustUseHealersTools": "You need to use healers' tools.",
+	"PF2E.MKS.Warning.Action.MustUseThievesTools": "You need to use thieves' tools.",
+	"PF2E.MKS.Warning.Action.MustUseAlchemistsTools": "You need to use alchemists' tools.",
 	"PF2E.MKS.Error.DCNotSetInTime": "GM didn't set required DC in time.",
 	"pf2e.mks.check.skill-check.defaulttitle.firstpart": "${actor.name} ${stat.label} Check",
 	"pf2e.mks.check.perception-check.defaulttitle.firstpart": "${actor.name} Perception Check",
