--- a/lang/tr.json
+++ b/lang/tr.json
@@ -30,6 +30,7 @@
 	"PF2E.Actions.Warning.FreeHands": "Bir eliniz boş olmalı veya uygun ekipman kullanmalısınız.",
 	"PF2E.Actions.Warning.Size": "Hedefiniz sizin için çok büyük!",
 	"PF2E.Actions.Warning.Reach": "Bu hamle için hedefinizin çok uzağındasınız!",
+	"PF2E.Actions.Warning.Immune": "Hedefiniz bu hamleye karşı bağışıklık sahibi.",
 	
 	"PF2E.Actions.Aid.Title": "Yardım Et",
 	"PF2E.Actions.AdministerFirstAid.Title": "İlkyardım",
@@ -38,6 +39,7 @@
 	"PF2E.Actions.AdministerFirstAid.Dying": "Ölüm Hali",
 	"PF2E.Actions.AdministerFirstAid.BleedingFlatCheck": "Kanamayı engeleme atışı : {roll}",
 	"PF2E.Actions.AdministerFirstAid.PoisoningFlatCheck": "Zehirlenmeyi engeleme atışı : {roll}",
+	"PF2E.Actions.AdministerFirstAid.Warning.NoAffliction": "Tedavi edecek bir durum bulunmamaktadır.",
 	"PF2E.Actions.AvertGaze.Title": "Gözünü Kaçır",
 	"PF2E.Actions.Balance.Title": "Dengeni Sağla",
 	"PF2E.Actions.CommandAnAnimal.Title": "Hayvana Emret",
@@ -67,6 +69,7 @@
 	"PF2E.Actions.Mount.Title": "Bin",
 	"PF2E.Actions.Mount.MountMessage": "{mount} üzerine bindim.",
 	"PF2E.Actions.Mount.DismountMessage": "{mount} üzerinden indim.",
+	"PF2E.Actions.Mount.Warning.NoAvail": "Uygun binek yok.",
 	"PF2E.Actions.PalmAnObject.Title": "Nesneyi Aşır",
 	"PF2E.Actions.Perform.Title": "Performans Sergile",
 	"PF2E.Actions.PointOut.Title": "İşaret Et",
@@ -215,8 +218,11 @@
 	"PF2E.MKS.Warning.Target.NoneMustBeSelected": "Hiçbir piyon hedeflenmemelidir.",
 	"PF2E.MKS.Warning.Target.MustBeAlly": "Dost bir piyon hedeflenmemelidir.",
 	"PF2E.MKS.Warning.Target.MustBeEnemy": "Düşman bir piyon hedeflenmemelidir.",
+	"PF2E.MKS.Warning.Target.WrongType": "Doğru tipte bir piyon hedeflenmemelidir.",
 	"PF2E.MKS.Warning.Encounter.NoneExists": "Mücadelede değilsiniz.",
 	"PF2E.MKS.Warning.Action.MustUseHealersTools": "Sağlıkçı çantası kullanmalısınız.",
+	"PF2E.MKS.Warning.Action.MustUseThievesTools": "Hırsız çantası kullanmalısınız.",
+	"PF2E.MKS.Warning.Action.MustUseAlchemistsTools": "Simyacı çantası kullanmalısınız.",
 	"PF2E.MKS.Error.DCNotSetInTime": "GM DC'yi zamanında tayin edemedi.",
 	"pf2e.mks.check.skill-check.defaulttitle.firstpart": "${actor.name} ${stat.label} Atışı",
 	"pf2e.mks.check.perception-check.defaulttitle.firstpart": "${actor.name} Algı Atışı",
