--- a/lang/tr.json
+++ b/lang/tr.json
@@ -160,7 +160,10 @@
   	"PF2E.TabActionsDowntimeLabel": "Dinlenme",
   	"PF2E.ActionTag.situational": "Durumsal",
   	"PF2E.ActionTag.combat": "Savaş",
-  	"PF2E.ActionTag.hostile": "Düşmanca",
+	"PF2E.ActionTag.attack": "Atak",
+	"PF2E.ActionTag.mental": "Zihinsel",
+	"PF2E.ActionTag.assist": "Yardım",
+  	"PF2E.ActionTag.move": "Hareket",
   	"PF2E.ActionTag.basic": "Basit",
   	"PF2E.ActionTag.social": "Sosyal",
   	"PF2E.ActionTag.stealth": "Gizlilik",
