map impl for attack actions

--- a/lang/en.json
+++ b/lang/en.json
@@ -125,6 +125,7 @@
 	"PF2E.MKS.SC.divine": "Kutsal - Divine Büyü",
 	
 	"PF2E.MKS.Modifier.partially-disarmed": "Loose Grip",
+	"PF2E.MKS.Modifier.map": "Multiple Attack Penalty",
 	
 	"PF2E.MKS.Chat.HealthLost": "Has lost {healthLost} HP",
 	
