--- a/lang/tr.json
+++ b/lang/tr.json
@@ -127,6 +127,7 @@
 	"PF2E.ConditionTypeHidden": "Saklanmış",
 	"PF2E.ConditionTypeUndetected": "Konumu Belirsiz",
 	"PF2E.MKS.Modifier.partially-disarmed": "Gevşek Tutuş",
+	"PF2E.MKS.Modifier.map": "Ardarda Saldırı Cezası",
 
 	"PF2E.SavesFortitude": "Direnç - Fortitude",
 	"PF2E.SavesReflex": "Refleks",
