stealth actions warnings

--- a/lang/en.json
+++ b/lang/en.json
@@ -172,6 +172,9 @@
 	"PF2E.MKS.Warning.Target.MustBeAlly": "You must target an ally token.",
 	"PF2E.MKS.Warning.Target.MustBeEnemy": "You must target an enemy token.",
 	"PF2E.MKS.Warning.Target.WrongType": "You must target a token of a specific type.",
+	"PF2E.MKS.Warning.Target.AtLeastHidden": "You must be at least hidden from target(s).",
+	"PF2E.MKS.Warning.Target.NoCoverOrConcealment": "You have no cover or concealment from target(s).",
+	"PF2E.MKS.Warning.Target.AlreadyHidden": "You are already hidden from target(s).",
 	"PF2E.MKS.Warning.Encounter.NoneExists": "No encounter found.",
 	"PF2E.MKS.Warning.Action.MustUseHealersTools": "You need to use healers' tools.",
 	"PF2E.MKS.Warning.Action.MustUseThievesTools": "You need to use thieves' tools.",
