--- a/lang/tr.json
+++ b/lang/tr.json
@@ -225,6 +225,9 @@
 	"PF2E.MKS.Warning.Target.MustBeAlly": "Dost bir piyon hedeflenmemelidir.",
 	"PF2E.MKS.Warning.Target.MustBeEnemy": "Düşman bir piyon hedeflenmemelidir.",
 	"PF2E.MKS.Warning.Target.WrongType": "Doğru tipte bir piyon hedeflenmemelidir.",
+	"PF2E.MKS.Warning.Target.AtLeastHidden": "Hedef(ler)e karşı en azında gizlenmiş olmalısınız.",
+	"PF2E.MKS.Warning.Target.NoCoverOrConcealment": "Hedef(ler)e karşı ne siperdesiniz, ne de perdelemeye sahipsiniz.",
+	"PF2E.MKS.Warning.Target.AlreadyHidden": "Hedef(ler)e karşı zaten gizlenmiş durumdasınız.",
 	"PF2E.MKS.Warning.Encounter.NoneExists": "Mücadelede değilsiniz.",
 	"PF2E.MKS.Warning.Action.MustUseHealersTools": "Sağlıkçı çantası kullanmalısınız.",
 	"PF2E.MKS.Warning.Action.MustUseThievesTools": "Hırsız çantası kullanmalısınız.",
